Added some initialization of game data, player icons, and player piece animation movement